Add section on alternative learning environments

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -248,6 +248,12 @@
 \label{devserver}
 \paragraph{} The university has heap of server hardware that is used to provide a virtual infrastructure for us. Within this hardware we have a virtual machine that has been assembled purely for our use. It is based on Ubuntu Server and has all of the same software installed that we would use in Levinux, e.g. Python, Flask, SQLite, Vim, etc. We can access this server using PuTTY, or any other SSH client using our regular Napier credentialy, e.g. your matriculation number and password. The server is located at \url{set09103.napier.ac.uk}
 
+\section{Alternative Learning Environments}
+\label{alternatives}
+\paragraph{} If you have an OSX or Linux laptop then you can easily install Python, Flask, Vim and all the other tools locally without needing to use either Levinux or the dev server. Talk to the module leader or the demonstrator about this.
+
+\paragraph{} A second alternative is to install a Linux, like Ubuntu server, into a virtual machine running under VirtualBox on your own laptop. This is quite advanced and will require non-trivial understanding of Linux and virtualisation. For this reason it's not directly supported but is an allowable option for students who are confident of their Linux admin skills.
+
 \section{SSH}
 \label{ssh}
 \paragraph{} SSH which stands for `Secure Shell' is a tool for logging in to remote servers. We can use SSH to access Levinux as this provides us with an easy way to log in multiple times, e.g. have multiple shells (command lines) open and logged in to Levinux. The advantage of having multiple shells is that we can edit and save a program in one shell and run the program and monitor output in another shell. As you can imagine, this is very useful when we are developing new web apps on our Levinux server.
