Fix #6 - Remove framing because it interferes with footnotes.

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -523,7 +523,7 @@ There is also a cribsheet of useful commands in section \ref{cribsheet_vim}.
 
 \paragraph{} Whilst you might have seen Git before, perhaps as a plugin to an IDE or as a standalone GUI app, Git is primarily a command line application, so we shall use it to get our source code in and out of Levinux.
 
-\begin{framed}
+%\begin{framed}
 \textbf{IMPORTANT} We shall use Git to support the hand-in of courseworks in this module so you should get familiar with it as soon as possible. A good place to start is by dipping into the Git SCM book\footnote{\url{http://git-scm.com/book/en/v2/Getting-Started-About-Version-Control}}.
 
 \paragraph{} There are also numerous interactive tutorials and resources to help you get started with Git:
@@ -535,7 +535,7 @@ There is also a cribsheet of useful commands in section \ref{cribsheet_vim}.
 
 \paragraph{} You should also create either a Github account\footnote{\url{https://github.com/}} or a Bitbucket account\footnote{\url{https://bitbucket.org}} (or both if you like) then create a repository within your new account called `set09103'. You will push all of your code throughout the module into this repository and at hand in time I will pull a copy for marking. The advantage of this appraoch is that at any point, if you need help with your code, then we have a copy that I can see remotely. However this only works if you keep adding your code to your repository. That means whenever you make changes you need to (1) add them, (2) commit them with an explanatory message,  and (3) push the changes from your local repository to the shared one on Github or Bitbucket.
 
-\end{framed}
+%\end{framed}
 
 \paragraph{} Git is already installed in our learning environment, whether Levinux or the set09103VM. In order to use it we have to do a couple of things. Log into Levinux then do the following (obviously replace my email address and name with your own):
 \begin{lstlisting}[style=DOS]
