No longer need to follow headers in curl call

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -948,7 +948,7 @@ if __name__ == "__main__":
 \paragraph{} NB. For this to work the file \emph{style.css} must be stored in the /static/ subdirectory. Here is full example that display an image in your browser. To get his to work you will have to create the /static/ directory then put an image file into it. You can use the curl tool at the command line to retrieve a remote image from the internet like so:
 
 \begin{lstlisting}[style=DOS]
-    $ curl -L -o vmask.jpg siwells.github.io/assets/images/vmask.jpg 
+    $ curl -o vmask.jpg siwells.github.io/assets/images/vmask.jpg 
 \end{lstlisting}
 
 \paragraph{} which will store an image file called \emph{vmask.jpg} in the directory in which the command is run. You can then use the following to display the file:
