fixed couple of typos

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1958,7 +1958,7 @@ static/css/
 static/font/
 static/ico/
 static/img/
-istatic/js/
+static/js/
 \end{lstlisting}
 
 \paragraph{} For the moment though we can use the directory hierachy that Bootstrap comes with. Change directory into your static directory  then download Bootstrap from \url{https://github.com/twbs/bootstrap/releases/download/v3.3.5/bootstrap-3.3.5-dist.zip} and unpack it, e.g.
