Fix #10 naae of DL'ed file wrong in unzip statement

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1965,7 +1965,7 @@ static/js/
 
 \begin{lstlisting}[style=DOS]
     $ curl -L -o bootstrap.zip https://github.com/twbs/bootstrap/releases/download/v3.3.5/bootstrap-3.3.5-dist.zip
-    $ unzip bootstrap-3.3.5-dist.zip
+    $ unzip bootstrap.zip
 \end{lstlisting}
 
 \paragraph{} Now move the bootstrap files into directory hierarchy that you created. For example, assuming you are in the static directory and you downloaded the bootstrap zip file
