Add the Git parable to resources

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -528,6 +528,7 @@ There is also a cribsheet of useful commands in section \ref{cribsheet_vim}.
 
 \paragraph{} There are also numerous interactive tutorials and resources to help you get started with Git:
 \begin{enumerate}
+\item The Git Parable: \url{http://tom.preston-werner.com/2009/05/19/the-git-parable.html}
 \item Github's Learn Git 15 minute tutorial: \url{https://try.github.io/levels/1/challenges/1}
 \item Learn Git Branching \url{http://pcottle.github.io/learnGitBranching/}
 \item Git Immersion \url{http://gitimmersion.com/lab_01.html}
