--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -135,23 +135,65 @@
 \addtocontents{toc}{~\hfill\textbf{Page}\par}
 
 \mainmatter
-%\part{Admin}
+
+
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%       ADMIN
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%
+
+
+
+\part{Admin}
+
+\chapter{Introduction}
+\label{intro}
+
+\paragraph{} Welcome to the Advanced Web Tech. module at Edinburgh Napier University. This module is about the Web, what it is, what we can do with it, and what it might be like in the future. Rather than focus on the user side of web technology, such as CSS and Javascript, which we've all probably seen in other modules (particularly web tech, the pre-requisite for this module), we are going to take a more holistic approach and examine both the server and client side. We shall look at HTTP (the core of all web technologies) and learn how APIs, Web Services, \& RESTful architectures are built to move data around. We will then delve into some more topical discussions, starting with security \& privacy on the web, then looking at adding intelligence (Semantic Web), adding increased, scalable interaction (Realtime Web) and private, anonymous, and un-censorable web-technologies (Dark Web). We wrap up the module by examining a few technologies that might form the basis of future web capabilities like Blockchain and IPFS.
+
+\paragraph{} Lectures and labs will not necessarily align neatly, the labs will progress, on a week-by-week and chapter-by-chapter basis to form a first course in ``developing server side web-apps using Python and professional practises in a Linux-based environment''. The lectures will summarise some of this material, providing an opportunity to talk over what we learned in the lab, but primarily, the lectures are an opportunity for us to discuss many other aspects of the Web, focussing in particular on two aspects. Firstly, the structure of the existing Web. Secondly the various facets of Web technologies that influence or alter the way that we use, manipulate, navigate, and share information. These break down into a series of named facets: the semantic web, the realtime web, the dark web, and the permanent web, each of which imposes its own constraints on and proffers opportunities for what the Web is and can do.
+
+\chapter{Overview}
+\label{overview}
+\paragraph{} How should we use this workbook? Ideally we would work through it on a chapter-by-chapter basis supplementing our work with background reading and wider exploration of each topic introducted. Some chapters will take longer to complete than others, and other chapters will need to be returned to multiple times. This is particularly true for the first two chapters. To learn both Linux and Python in a fortnight is a tall order so I'd suggest working iteratively, do enough to make some progress, then frequently return to the respective chapters to learn a little more, usually by following the links and footnotes to further practise materials.
+
+\paragraph{} In the first week work through the first chapter in the lab section of the workbook. You can read ahead if you want but don't try to run any Flask web-apps on the dev server until you've been assigned your personal port numbers to run your own web-apps on. This week is mostly concerned with the foundation of our learning environment. Logging in, learning to navigate and do simple tasks at the command line, using a non-gui text editor, and using Git. There are links, usually in footnotes, throughout the chapter, for example, to practise the Linux command line then there are online web sites like the linuxzoo that you can use. Similarly, the links to Vim practise tutorials, particularly the Vim game, will help you practise the skills you need to work efficiently in subsequent weeks. Finally, make sure to work through the linked Git tutorials and ensure that you are confident that you understand each of these tools and their place within the learning environment before moving on to subsequent chapters. Each chapter is meant to cover an entire week of study, so don't rush through things within the scheduled lab session just to tell yourself the you've done all the work. In subsequent weeks you will start to build knowledge of the Python language and the Flask library which provides functionality for building server-hosted web-apps. The next chapter, on Python, is meant to cover at least a weeks work and deliberate practise. Mostly that week is concerned with developing basic skills in a new language, Python, which is actually quite a challenge. This is not because Python is particularly difficult but because learning a computer language well takes time and effort and you have to start somewhere. Subsequent weeks will require you to work through various chapters of the workbook. You will find that as you progress you will want to skip ahead to different sections, especially once the assessments are released and you want to include specific functionality in your coursework. So after about chapter 3 I expect that many of you will navigate your own path through the remainder of the workbook. The only proviso is that you should aim to have worked through every chapter by the end of the module.
+
+
+
+
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%       NOTES
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%
+
+
+
 
 %\part{Notes}
+
+
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%       LABS & PRACTICALS
+%%%%%%%%%%%%%
+%%%%%%%%%%%%%
 
 
 \part{Labs \& Practical Work}
 \chapter{Learning Environment Part \#1}
 \label{lab1}
-\paragraph{} Because Linux is one of the most widespread operating systems found on web-servers it makes sense for us to use a form of Linux as our learning environment on this \emph{Advanced} web technologies module. There are a lot of different versions of Linux, known as distributions or distros, and you might have heard or or even used some of them, for example, Debian or Ubuntu. Because we could spend an entire year learning about Linux we shall use a deliberately simplified version of a Linux environment which mimics many of the features found in a full Linux distibution. We shall also ignore many aspects, such as administration of Linux servers, so that we can focus on using Linux within the context of web-development. Our focus will be on the development of web-apps and an in depth investigation of what happens on the server side. That said, whilst we won't focus as much on the client, there is plenty of scope within the courseworks to put into practise your previous learning from the Web Techologies module from last year to make things pretty and provide a better user experience.
+\paragraph{} Because Linux is one of the most widespread operating systems found on web-servers it makes sense for us to use a form of Linux as our \emph{learning environment} for this \emph{Advanced} web technologies module. There are a lot of different versions of Linux, known as distributions or distros, and you might have heard or or even used some of them, for example, Debian or Ubuntu. Because we could spend an entire year learning about Linux, and still have more to learn, we shall use a deliberately simplified installation of a Linux environment. The main thing you will notice to begin with is the absence of a Graphical User Interface (GUI). Most web servers, in fact most servers in general, are administered from the commandline using text commands so in this module we'll build some experience of this aspect of modern computer use. We shall also ignore many aspects, such as administration of Linux servers, so that we can focus on using Linux within the context of web-development. Our focus will be on the development of web-apps and an in depth investigation of what happens on the server side. That said, whilst we won't focus as much on the client, there is plenty of scope within the courseworks to put into practise your previous learning from the Web Techologies module from last year to make things pretty and provide a better user experience.
 
 \paragraph{} There will be a number of core steps involved in getting acquainted with the learning environment:
 
 \begin{enumerate}
 \item Linux Development Server - Our Linux server which runs on the ENU virtual infrastructure.
 \item SSH - To enable us to connect from our Windows machine to our virtual Linux machine
-\item Basic Linux Usage at the command line
-\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code
+\item CLI - The Command Line Interface (CLI) where we'll type commands
+\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code. 
 \item Git - We shall use Git to store our source code and to ``hand in'' our coursework assignments
 \end{enumerate}
 
@@ -185,7 +227,7 @@
 \paragraph{} If you are on Linux or OS X then you will already have a version of SSH installed and all you need to do is open a terminal and type the following to log into the dev server:
 
 \begin{lstlisting}[style=DOS]
-    $ ssh MATRICNUMBER@set09103.napier.ac.uk -p 22
+    $ ssh MATRICNUMBER@set09103.napier.ac.uk
 \end{lstlisting}
 
 \paragraph{} to log into the dev server. NB. You \emph{MUST} replace MATRICNUMBER with your actual matriculation number from your napier credentials. Note that we should be very careful to type commands accurately, especially the log in command above, and to also to type our password accurately. If we make too many mistakes then the security service on the server will ban you for a period of time. This is a protection to stop attackers from trying multiple attempts at our passwords in order to gain access to the machine.
@@ -482,6 +524,20 @@ to list the files in the current directory. If you try this now you will be able
 \chapter{Learning Environment Part \#2}
 \label{lab2}
 \paragraph{} After last weeks extravaganza of new tools, we will only introduce two new tools this week, the Python language and a Python Library for developing web applications called Flask. By the end of this weeks practical work you should be able to build a simple `Hello Napier' web app using Python and Python-Flask which is hosted on and runs within our learning environment and whose source code is pushed to our personal Github (or Bitbucket) repositories. 
+
+\paragraph{} In total, by the end of this week we should all have at least some rudimentary experience with each of the following software tools:
+
+\begin{enumerate}
+\item Linux Development Server - Our Linux server which runs on the ENU virtual infrastructure.
+\item SSH - To enable us to connect from our Windows machine to our virtual Linux machine
+\item CLI - The Command Line Interface (CLI) where we'll type commands
+\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code. 
+\item Git - We shall use Git to store our source code and to ``hand in'' our coursework assignments
+\item Python - A general purpose programming language that is well suited to web development.
+\item Python Flask - A Python library for server-side web-app development.
+\end{enumerate}
+
+\paragraph{} This constitutes our entire learning environment. If you have missed any part of the learning environment then it is worth going back and filling in any gaps as they all work together to give us a solid foundation for the development of professional development skills and the production of robust and scalable web-apps. In other words....
 
 \begin{framed}
 \textbf{VERY IMPORTANT} The work this week builds directly on last week so if you haven't finished working through chapter \ref{lab1} then it is best to do that first or you will probably get horribly stuck.
@@ -1485,7 +1541,6 @@ if __name__ == ("__main__"):
 % CHAPTER 06
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
-%\begin{comment}
 \chapter{Flask: Configs, Sessions, Message Flashing, Logging, \& Testing}
 \label{lab06}
 \paragraph{} 
@@ -2199,7 +2254,6 @@ $  python init_db.py
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
 
-%\begin{comment}
 \chapter{Keeping Data safe with Encryption}
 \label{lab09}
 \paragraph{} Encryption is necessary to ensure that the data that we collect in our web-apps, for example, about our users, is stored safely. A good general approach is to not store any data about your users that you don't actually need for the purposes of your application.
@@ -2500,7 +2554,6 @@ if __name__ == "__main__":
 
 \paragraph{} However all is not lost. If we securely store our user's data and hash passwords and other sensitive data, and if we also follow a privacy-by-design methodology and only store data that is necessary for the effective functionality of our app, we can at least reduce the effects of a successful attack in terms of our user's personal data. If we are also active in logging the behaviour of our app, checking those logs, and reviewing our codebase for known vulnerabilities or attack vectors then we will also be reducing the likelihood of a successful attack occuring.
 
-%\end{comment}
 
 
 %%%%%%%%%%%%%%%%%
@@ -2535,6 +2588,8 @@ if __name__ == "__main__":
 % APPENDICES 
 %%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%
+
+\part{Appendices}
 
 \appendix
 \chapter{Cribsheets}
