--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -642,7 +642,7 @@ print "Hello Napier"
 \paragraph{} This will install the flask library in your local user account (as opposed to a system wide copy)\footnote{You might want to investigate Python's virtualenv or ``virtual environment'' tools for helping you to manage your Python projects and the libraries that they use.}. You can check whether a library is installed by then running the following:
 
 \begin{lstlisting}[style=DOS]
-    $ python -c "import Flask"
+    $ python -c "import flask"
 \end{lstlisting}
 
 \paragraph{} If there are no errors or other messages displayed then everything is fine and you can move on. If you do get errors or messages then it might be worth doing some background research to increase your knowledge. You should only need to do this once. Once Flask is installed you can then use it.
